--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
       </div>
     </div> <br><br>
 
-    <div class="col"><img src="Picture and videos\parkashsangam.jpg" alt="..."> <br>
+    <div class="col"><img src="parkashsangam.jpg" alt="..."> <br>
       <h3>Key people: Prakash Sangam (CEO 2014) </h3>
     </div>
   </div> <br><br>
