--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <b>India's No.1 Online Bus Ticket Booking Site</b></h3>
   </center>
 
-  <center><img src="Picture and videos\redBus-Allu-Arjun-.jpg" class="img-fluid" alt="..."
+  <center><img src="redBus-Allu-Arjun-.jpg" class="img-fluid" alt="..."
       style="border-radius: 7px; box-shadow: 1px 20px 30px;"></center> <br><br><br><br><br><br><br><br><br>
 
 
@@ -152,7 +152,7 @@
   </center>
 
   <div class="ratio ratio-16x9">
-    <iframe src="Picture and videos\redbusad.mp4" controls autoplay loop  style="border-radius: 7px;  box-shadow: 1px 20px 30px;"></iframe>
+    <iframe src="redbusad.mp4" controls autoplay loop  style="border-radius: 7px;  box-shadow: 1px 20px 30px;"></iframe>
   </div><br><br><br><br><br><br><br><br><br>
 
 
