--- a/about.html
+++ b/about.html
@@ -219,7 +219,7 @@
     In 2013, redBus was acquired by Ibibo Group, a subsidiary of South Africa's Naspers.</p> <br>
 
   <h2 style="text-align: center;">Brand Ambassador</h2>
-  <center><img src="Picture and videos\aa.jpg" alt=""
+  <center><img src="aa.jpg" alt=""
       style="width: 650px; height: auto; border-radius: 7px; box-shadow: 1px 20px 30px;"></center> <br>
   <h2 style="text-align: center; ">Allu Arjun(Actor)</h2> <br><br><br> <br><br>
 
