--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
           <li class="nav-item">
             <a class="nav-link text-danger" href="services.html">Services</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-danger" href="registration.html">Registration</a>
+          </li>
           <li class="nav-item dropdown">
             <a class=" nav-link dropdown-toggle text-danger" href="#" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
